Разметка страниц барбершопа
Создал разметку страниц барбершопа

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -126,7 +126,17 @@
           </div>
       </div>
   </footer>
-  
-
+  <div class="login-form">
+    <form action="">
+      <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
+      <p>Введите пожалуйста свой логин и пароль</p>
+      <input type="text" placeholder="Логин">
+      <input type="password" placeholder="Пароль">
+      <label ><input type="checked"> ЗАПОМНИТЕ МЕНЯ</label>
+      <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
+      <button class="btn" type="submit">ВОЙТИ</button>
+    </form>
+  </div>
+  <div class="map"></div>
 </body>
 </html>
