--- a/barbershop/item.html
+++ b/barbershop/item.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,17 +51,17 @@
     <section class="product-content">
       <div class="product-content-left">
         <figure class="product-img">
-          <img src="" width="460" height="498" alt="Baxter of California">
+          <img src="img/img.jpg" width="460" height="498" alt="Baxter of California">
         </figure>
         <div class="product-images">
           <figure >
-            <img src="" width="140" height="149" alt="Baxter of California">
+            <img src="img/img.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
           <figure >
-              <img src="" width="140" height="149" alt="Baxter of California">
+              <img src="img/img.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
           <figure >
-              <img src="" width="140" height="149" alt="Baxter of California">
+              <img src="img/img.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
         </div>
       </div>
@@ -106,17 +106,17 @@
           </div>
       </div>
   </footer>
-  <div class="login-form">
-    <form action="">
+  <div class="login-form popup">
+    <form action="item.html">
       <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
       <p>Введите пожалуйста свой логин и пароль</p>
       <input type="text" placeholder="Логин">
       <input type="password" placeholder="Пароль">
-      <label ><input type="checked"> ЗАПОМНИТЕ МЕНЯ</label>
+      <label ><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
       <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map popup"></div>
 </body>
 </html>
