--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -108,17 +108,17 @@
           </div>
       </div>
   </footer>
-  <div class="login-form">
-    <form action="">
+  <div class="login-form popup">
+    <form action="price-list">
       <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
       <p>Введите пожалуйста свой логин и пароль</p>
       <input type="text" placeholder="Логин">
       <input type="password" placeholder="Пароль">
-      <label ><input type="checked"> ЗАПОМНИТЕ МЕНЯ</label>
+      <label ><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
       <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map popup"></div>
 </body>
 </html>
