--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,16 +56,16 @@
       <label><input type="checkbox" > Murray’s</label>
       <label><input type="checkbox" > American Crew</label>
       <h3>ГРУППЫ ТОВАРОВ:</h3>
-      <label for=""><input type="radio" name="gr" value="gr1"> Бритвенные  принадлежности</label>
-      <label for=""><input type="radio" name="gr" value="gr2"> Средства для ухода</label>
-      <label for=""><input type="radio" name="gr" value="gr3"> Аксессуары</label>
+      <label><input type="radio" name="gr" value="gr1"> Бритвенные  принадлежности</label>
+      <label><input type="radio" name="gr" value="gr2"> Средства для ухода</label>
+      <label><input type="radio" name="gr" value="gr3"> Аксессуары</label>
       <button class="btn" type="submit">Показать</button>
       
     </div>
     <section class="products">
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+          <img src="img/img.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
         </figure>
         <p class="product-name">Набор для бритья «Baxter of California»</p>
         <div class="btn-buy">
@@ -75,7 +75,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
+          <img src="img/img.jpg" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
         </figure>
         <p class="product-name">Увлажняющий кондиционер  «Baxter of California»</p>
         <div class="btn-buy">
@@ -85,7 +85,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+          <img src="img/img.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
         </figure>
         <p class="product-name">Гель для волос «SUAVECITO»</p>
         <div class="btn-buy">
@@ -95,7 +95,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Глина для укладки волос  «American crew»">
+          <img src="img/img.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
         </figure>
         <p class="product-name">Глина для укладки волос  «American crew»</p>
         <div class="btn-buy">
@@ -105,7 +105,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+          <img src="img/img.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
         </figure>
         <p class="product-name">Гель для волос «AMERICAN CREW»</p>
         <div class="btn-buy">
@@ -115,7 +115,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
+          <img src="img/img.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
         </figure>
         <p class="product-name">Набор для путешествий  «Baxter of California»</p>
         <div class="btn-buy">
@@ -153,17 +153,17 @@
           </div>
       </div>
   </footer>
-  <div class="login-form">
-    <form action="">
+  <div class="login-form popup">
+    <form action="shop.html">
       <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
       <p>Введите пожалуйста свой логин и пароль</p>
       <input type="text" placeholder="Логин">
       <input type="password" placeholder="Пароль">
-      <label ><input type="checked"> ЗАПОМНИТЕ МЕНЯ</label>
+      <label ><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
       <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map popup"></div>
 </body>
 </html>
