--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,13 +63,13 @@
     <section class="properties">
         <div class="slider item">
           <div class="item">
-            <img src="" alt="Префораторы">
+            <img src="img/img.jpg" alt="Префораторы">
             <h3>Префораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
           </div>
           <div class="item">
-            <img src="" alt="Дрели ">
+            <img src="img/img.jpg" alt="Дрели ">
             <h3>Дрели </h3>
             <p>Соседям на радость!</p>
             <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
@@ -94,7 +94,7 @@
       <div class="popular-product">
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/img.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 9000</span>
           <span class="old-price">32500 Р.</span>
@@ -102,7 +102,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/img.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 3000</span>
           <span class="old-price">22500 Р.</span>
@@ -110,7 +110,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/img.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 6000</span>
           <span class="old-price">30500 Р.</span>
@@ -118,7 +118,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/img.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 2000</span>
           <span class="new">new</span>
@@ -133,42 +133,42 @@
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="124" height="32" alt="bosch">
+          <img src="img/img.jpg" width="124" height="32" alt="bosch">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="123" height="40" alt="makita">
+          <img src="img/img.jpg" width="123" height="40" alt="makita">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="146" height="44" alt="deWalt">
+          <img src="img/img.jpg" width="146" height="44" alt="deWalt">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="200" height="88" alt="Интерскол">
+          <img src="img/img.jpg" width="200" height="88" alt="Интерскол">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="168" height="31" alt="Hitachi">
+          <img src="img/img.jpg" width="168" height="31" alt="Hitachi">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="121" height="73" alt="LG">
+          <img src="img/img.jpg" width="121" height="73" alt="LG">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="151" height="96" alt="AEG">
+          <img src="img/img.jpg" width="151" height="96" alt="AEG">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="204" height="69" alt="Metabo">
+          <img src="img/img.jpg" width="204" height="69" alt="Metabo">
         </figure>
       </div>
     </section>
@@ -189,7 +189,7 @@
               Ведь мы неплохо заработаем, 
               поднимая его на ваш этаж!
           </p>
-          <img src="" width="240" height="61" alt="Доставка">
+          <img src="img/img.jpg" width="240" height="61" alt="Доставка">
         </div>
         <div class="service-item delivery">
           <h3>Гарантия</h3>
@@ -199,7 +199,7 @@
               вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
               Дом уж восстановите как-нибудь сами.
           </p>
-          <img src="" width="172" height="170" alt="Гарантия">
+          <img src="img/img.jpg" width="172" height="170" alt="Гарантия">
         </div>
         <div class="service-item delivery">
           <h3>Кредит</h3>
@@ -208,7 +208,7 @@
               Кредитные консультанты придут вам на помощь.
           </p>
           <a href="" class="btn">ОТПРАВИТЬ ЗАЯВКУ</a>
-          <img src="" width="181" height="184" alt="Кредит">
+          <img src="img/img.jpg" width="181" height="184" alt="Кредит">
         </div>
       </div>
     </section>
@@ -288,12 +288,12 @@
   </main>
   <div class="popup map"></div>
   <div class="feadback poupup">
-    <form action="">
+    <form action="index.html">
       <label>Ваше имя <input type="text" placeholder="Представьтесь, пожалуйста"></label>
       <label>Ваш e-mail: <input type="email" placeholder="Для отправки ответа"></label>
       <label>
         Текст письма:
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
       </label>
       <button class="btn" type="submit">ОТПРАВИТЬ</button>
     </form>
