Подготовил графику для барбершопа
Подготовил графику для барбершопа, и прописал путь к изображениям в разметке

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -35,7 +35,7 @@
   </header>
   <main class="container">
     <div class="main-logo">
-      <img src="#" width="368" height="204" alt="Барбершоп «Бородинский»">
+      <img src="img/logo.png" width="371" height="155" alt="Барбершоп «Бородинский»">
     </div>
     <section class="features">
       <div class="features-item">
@@ -70,7 +70,7 @@
           <h2>Фотогалерея</h2>
           <div class="gallery">
                 <figure class="gallery-content">
-                  <img src="" width="286" height="164" alt="">
+                  <img src="img/gallery-1.jpg" width="286" height="164" alt="">
                 </figure>
                 <button class="btn" type="button">Назад</button>
                 <button class="btn" type="button">Вперёд</button>
@@ -137,6 +137,8 @@
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map">
+    <img src="img/map.jpg" width="766" height="560" alt="ул. Большая Конюшенная 19">
+  </div>
 </body>
 </html>
