--- a/barbershop/item.html
+++ b/barbershop/item.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="top-logo">
         <a href="">
-          <img src="img/logo.png" alt="Барбершоп «Бородинский»">
+          <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="main-navigation">
@@ -51,17 +51,17 @@
     <section class="product-content">
       <div class="product-content-left">
         <figure class="product-img">
-          <img src="" width="460" height="498" alt="Baxter of California">
+          <img src="img/travel-kit.jpg" width="460" height="498" alt="Baxter of California">
         </figure>
         <div class="product-images">
           <figure >
-            <img src="" width="140" height="149" alt="Baxter of California">
+            <img src="img/travel-kit-prev-1.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
           <figure >
-              <img src="" width="140" height="149" alt="Baxter of California">
+              <img src="img/travel-kit-prev-2.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
           <figure >
-              <img src="" width="140" height="149" alt="Baxter of California">
+              <img src="img/travel-kit-prev-3.jpg" width="140" height="149" alt="Baxter of California">
           </figure>
         </div>
       </div>
@@ -117,6 +117,8 @@
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map">
+    <img src="img/map.jpg" width="766" height="560" alt="ул. Большая Конюшенная 19">
+  </div>
 </body>
 </html>
