--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="top-logo">
         <a href="">
-          <img src="img/logo.png" alt="Барбершоп «Бородинский»">
+          <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="main-navigation">
@@ -119,6 +119,8 @@
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map">
+    <img src="img/map.jpg" width="766" height="560" alt="ул. Большая Конюшенная 19">
+  </div>
 </body>
 </html>
