--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="top-logo">
         <a href="">
-          <img src="img/logo.png" alt="Барбершоп «Бородинский»">
+          <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="main-navigation">
@@ -65,7 +65,7 @@
     <section class="products">
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+          <img src="img/product-1.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
         </figure>
         <p class="product-name">Набор для бритья «Baxter of California»</p>
         <div class="btn-buy">
@@ -75,7 +75,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
+          <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
         </figure>
         <p class="product-name">Увлажняющий кондиционер  «Baxter of California»</p>
         <div class="btn-buy">
@@ -85,7 +85,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+          <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
         </figure>
         <p class="product-name">Гель для волос «SUAVECITO»</p>
         <div class="btn-buy">
@@ -95,7 +95,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Глина для укладки волос  «American crew»">
+          <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
         </figure>
         <p class="product-name">Глина для укладки волос  «American crew»</p>
         <div class="btn-buy">
@@ -105,7 +105,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+          <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
         </figure>
         <p class="product-name">Гель для волос «AMERICAN CREW»</p>
         <div class="btn-buy">
@@ -115,7 +115,7 @@
       </div>
       <div class="products-item">
         <figure class="product-img">
-          <img src="" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
+          <img src="img/product-6.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
         </figure>
         <p class="product-name">Набор для путешествий  «Baxter of California»</p>
         <div class="btn-buy">
@@ -164,6 +164,8 @@
       <button class="btn" type="submit">ВОЙТИ</button>
     </form>
   </div>
-  <div class="map"></div>
+  <div class="map">
+    <img src="img/map.jpg" width="766" height="560" alt="ул. Большая Конюшенная 19">
+  </div>
 </body>
 </html>
