--- a/barbershop/item.html
+++ b/barbershop/item.html
@@ -44,7 +44,7 @@
       <h1>Набор для путешествий «Baxter of California»</h1>
       <div class="breadcrumbs">
           <ul>
-            <li><a href="index.html">Глвная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="shop.html">Магазин</a></li>
             <li><a href="#">Средства для ухода</a></li>
             <li>Набор для путешествий «Baxter of California»</li>
@@ -73,17 +73,15 @@
                 <p>есть в наличии</p>
                 <p class="vendor-code">Артикул: dexter-ae</p>
             </div>
-            <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, 
+            <p class="product-descriotion">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, 
               крем после бритья, шампунь. Набор также может стать отличным подарком.
             </p>
             <div class="btn-buy">
               <p class="price">2 900 &#8381;</p>
-              <!-- одна обертка лишняя -->
               <a href="#" class="btn">Купить</a>
-              <!-- это ссылка -->
             </div>
-            <h3 class="txt-caption">В набор входят:</h3>
-            <ul>
+            <h3 class="txt-caption kit-caption">В набор входят:</h3>
+            <ul class="kit-list">
               <li>Средство для умывания (50 мл)</li>
               <li>Увлажняющий крем (50 мл)</li>
               <li>Крем для бритья (50 мл)</li>
