--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -51,8 +51,8 @@
       <h1 class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
       <section class="price-info">
           <div class="price-info-left">
-            <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h3>
-            <ul>
+            <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО<br> ЛУЧШИЕ СРЕДСТВА:</h3>
+            <ul class="brand-list">
               <li><a href="#">Baxter of California</a></li>
               <li><a href="#">Mr Natty</a></li>
               <li><a href="#">Suavecito</a></li>
@@ -60,7 +60,7 @@
             </ul>
           </div>
           <div class="price-info-right">
-            <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h3>
+            <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ<br> НАШИХ МАСТЕРОВ:</h3>
             <table class="price-table">
               <tr>
                 <td>СТРИЖКА</td>
