--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -76,7 +76,7 @@
                 <figure class="product-img">
                   <img src="img/product-1.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
                 </figure>
-                <p class="product-name">Набор для бритья «Baxter of California»</p>
+                <p class="product-name">Набор для бритья <span class="name">«Baxter of California»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">2 900 &#8381;</p>
@@ -88,7 +88,7 @@
                 <figure class="product-img">
                   <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
                 </figure>
-                <p class="product-name">Увлажняющий кондиционер  «Baxter of California»</p>
+                <p class="product-name">Увлажняющий кондиционер <span class="name">«Baxter of California»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">750 &#8381;</p>
@@ -100,7 +100,7 @@
                 <figure class="product-img">
                   <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
                 </figure>
-                <p class="product-name">Гель для волос «SUAVECITO»</p>
+                <p class="product-name">Гель для волос <span class="name">«SUAVECITO»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">2 900 &#8381;</p>
@@ -112,7 +112,7 @@
                 <figure class="product-img">
                   <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
                 </figure>
-                <p class="product-name">Глина для укладки волос  «American crew»</p>
+                <p class="product-name">Глина для укладки волос  <span class="name">«American crew»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">500 &#8381;</p>
@@ -124,7 +124,7 @@
                 <figure class="product-img">
                   <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
                 </figure>
-                <p class="product-name">Гель для волос «AMERICAN CREW»</p>
+                <p class="product-name">Гель для волос <span class="name">«AMERICAN CREW»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">300 &#8381;</p>
@@ -136,7 +136,7 @@
                 <figure class="product-img">
                   <img src="img/product-6.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
                 </figure>
-                <p class="product-name">Набор для путешествий  «Baxter of California»</p>
+                <p class="product-name">Набор для путешествий  <span class="name">«Baxter of California»</span></p>
               </a>
               <div class="btn-buy">
                 <p class="price">3 900 &#8381;</p>
