--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,7 +21,7 @@
           <input type="search" placeholder="Поиск">
         </label>
         <div class="marker">Закладка: 0</div>
-        <div class="cart cart-empty">Корзина:0</div>
+        <div class="cart cart-empty">Корзина: 0</div>
         <div class="orders-btn">
           <a class="btn btn-success" href="#">Оформить заказ</a>
         </div>
@@ -38,8 +39,8 @@
           <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </div>
         <div class="user-block">
-          <a class="btn btn-signin" type="button">Войти</a>
-          <a class="btn" href="">Регистрация</a>
+          <a class="btn user-btn btn-signin" type="button">Войти</a>
+          <a class="btn btn-reg" href="">Регистрация</a>
         </div>
       </div>
     </div>
